# pheatmap-python

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  index.md  pheatmap_tutorial.ipynb
pheatmap/: __init__.py  _breaks.py  _cluster.py  _colours.py  _grobs.py  _layout.py  _motor.py  _pheatmap_object.py  _registry.py  _scale.py  _utils.py  pheatmap.py
tests/: conftest.py  test_breaks.py  test_cluster.py  test_colours.py  test_layout.py  test_pheatmap.py  test_scale.py  test_utils.py
tests/fixtures/: annotation_palette_seed3453.json  build_fixtures.R  hclust_complete_euclidean.npz  hclust_correlation_rows.npz  hclust_minkowski_rows.npz  test_matrix.npz
tutorials/: pheatmap_tutorial.ipynb
