[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pheatmap_py"
version = "1.0.13+ffd0f8c"
description = "Python port of the R pheatmap package"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "grid_py>=0.1.0",
    "gtable_py>=0.1.0",
    "scales>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "mkdocs-jupyter"]

[tool.hatch.build.targets.wheel]
packages = ["pheatmap"]

[tool.hatch.build.targets.sdist]
include = ["pheatmap", "tests", "tutorials", "validation", "docs", "mkdocs.yml", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
